--- a/x-pages/demo/index.html
+++ b/x-pages/demo/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>x-pages</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="../../fast-font/fast-font.css" rel="stylesheet">
     <link href="../../theme/theme.css" rel="stylesheet">
     <link href="../../animations/animations.css" rel="stylesheet">
@@ -10,49 +11,56 @@
     <script src="../x-pages.js"></script>
     <link href="../x-pages.css" rel="stylesheet">
     <style type="text/css">
-        body {
-            background: var(--primary-background);
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
+    body {
+        background: var(--primary-background);
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 
-        x-pages {
-            width: 300px;
-            height: 300px;
-            color: white;
-            font-size: 32px;
-            margin: 32px;
-        }
+    x-pages {
+        width: 300px;
+        height: 300px;
+        color: white;
+        font-size: 32px;
+        margin: 32px;
+    }
 
-        x-pages > * {
-            padding: 16px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 8px;
-            border: 1px solid white;
-        }
+    x-pages>* {
+        padding: 16px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 8px;
+        border: 1px solid white;
+    }
+
+    [page="page-one"] {
+        background-color: teal;
+    }
+
+    [page="page-two"] {
+        background-color: lightblue;
+    }
     </style>
 </head>
 
 <body>
-<x-pages default="page-one" animation="fade">
-    <div page="page-one" animation="move-grow-fade-left">1</div>
-    <div page="page-two" animation="move-grow-fade-right">2</div>
-    <div page="page-three">3</div>
-    <x-fancy-page page="page-four" animation-show="shrink-in" animation-hide="shake">4</x-fancy-page>
-</x-pages>
-
-<select>
-    <option value="page-one">Page One</option>
-    <option value="page-two">Page Two</option>
-    <option value="page-three">Page Three</option>
-    <option value="page-four">Page Four</option>
-</select>
-<script>
+    <x-pages default="page-one" animation="fade">
+        <div page="page-one" animation="move-grow-fade-left">1</div>
+        <div page="page-two" animation="move-grow-fade-right">2</div>
+        <div page="page-three">3</div>
+        <x-fancy-page page="page-four" animation-show="shrink-in" animation-hide="shake">4</x-fancy-page>
+    </x-pages>
+    <select>
+        <option value="page-one">Page One</option>
+        <option value="page-two">Page Two</option>
+        <option value="page-three">Page Three</option>
+        <option value="page-four">Page Four</option>
+    </select>
+    <script>
     class XFancyPage extends XElement {
         onShow() {
             console.log('Page four shown.');
@@ -67,7 +75,7 @@
     const $pages = new XPages();
 
     document.querySelector('select').addEventListener('change', event => $pages.selected = event.target.value);
-</script>
+    </script>
 </body>
 
 </html>
