--- a/view-backup-file/demo/index.html
+++ b/view-backup-file/demo/index.html
@@ -4,35 +4,15 @@
 <head>
     <title>view-backup-file</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <link href="../../fast-font/fast-font.css" rel="stylesheet">
-    <link href="../../theme/theme.css" rel="stylesheet">
-    <link href="../../inputs/inputs.css" rel="stylesheet">
-    <link href="../../app-layout/app-layout.css" rel="stylesheet">
-    <link href="../../typography/typography.css" rel="stylesheet">
     <link href="../view-backup-file.css" rel="stylesheet">
-    <link href="../../x-wallet-backup/x-wallet-backup.css" rel="stylesheet">
-    <script src="/robohash/dist/robohash.min.js"></script>
-    <script src="/identicon/src/identicon.js"></script>
-    <script src="/identicon/src/identicon-img.js"></script>
-    <script src="/qr-encoder/qr-encoder.min.js"></script>
-    <script src="/wallet-backup/wallet-backup.js"></script>
-    <script src="/x-element/x-element.js"></script>
-    <script src="/x-element/x-view.js"></script>
-    <link href="../../x-view/x-view.css" rel="stylesheet">
-    <script src="../../x-slides/x-slides.js"></script>
-    <link href="../../x-slides/x-slides.css" rel="stylesheet">
-    <link href="../../x-loading-animation/x-loading-animation.css" rel="stylesheet">
-    <script src="../../x-pinpad/x-pinpad.js"></script>
-    <link href="../../x-pinpad/x-pinpad.css" rel="stylesheet">
-    <script src="../../x-wallet-backup/x-wallet-backup.js"></script>
-    <script src="../view-backup-file.js"></script>
 </head>
 
 <body>
     <main>
         <view-backup-file></view-backup-file>
     </main>
-    <script>
+    <script type="module">
+    import ViewBackupFile from '../view-backup-file.js';
     const $view = new ViewBackupFile();
     document.addEventListener('x-export-pin', e => _onPinExport(e));
 
