--- a/view-backup-phrase-validate/demo/index.html
+++ b/view-backup-phrase-validate/demo/index.html
@@ -3,22 +3,6 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <link href="../../fast-font/fast-font.css" rel="stylesheet">
-    <link href="../../typography/typography.css" rel="stylesheet">
-    <link href="../../theme/theme.css" rel="stylesheet">
-    <link href="../../inputs/inputs.css" rel="stylesheet">
-    <link href="../../app-layout/app-layout.css" rel="stylesheet">
-    <script src="/x-element/x-element.js"></script>
-    <script src="/x-element/x-view.js"></script>
-    <link href="../../x-view/x-view.css" rel="stylesheet">
-    <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
-    <script src="../../x-success-mark/x-success-mark.js"></script>
-    <link href="../../x-success-mark/x-success-mark.css" rel="stylesheet">
-    <script src="../../x-slides/x-slides.js"></script>
-    <link href="../../x-slides/x-slides.css" rel="stylesheet">
-    <script src="../../x-mnemonic-validate/x-mnemonic-validate.js"></script>
-    <link href="../../x-mnemonic-validate/x-mnemonic-validate.css" rel="stylesheet">
-    <script src="../view-backup-phrase-validate.js"></script>
     <link href="../view-backup-phrase-validate.css" rel="stylesheet">
 </head>
 
@@ -26,7 +10,8 @@
     <main>
         <view-backup-phrase-validate></view-backup-phrase-validate>
     </main>
-    <script>
+    <script type="module">
+    import ViewBackupPhraseValidate from '../view-backup-phrase-validate.js';
     const $view = new ViewBackupPhraseValidate();
 
     const randomKey = window.crypto.getRandomValues(new Uint8Array(32));
