--- a/view-backup-phrase/demo/index.html
+++ b/view-backup-phrase/demo/index.html
@@ -3,31 +3,15 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <link href="../../fast-font/fast-font.css" rel="stylesheet">
-    <link href="../../typography/typography.css" rel="stylesheet">
-    <link href="../../theme/theme.css" rel="stylesheet">
-    <link href="../../inputs/inputs.css" rel="stylesheet">
-    <link href="../../app-layout/app-layout.css" rel="stylesheet">
-    <script src="/x-element/x-element.js"></script>
-    <script src="/x-element/x-view.js"></script>
-    <link href="../../x-view/x-view.css" rel="stylesheet">
-    <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
-    <script src="../../x-slides/x-slides.js"></script>
-    <link href="../../x-slides/x-slides.css" rel="stylesheet">
-    <script src="../../x-privacy-agent/x-privacy-agent.js"></script>
-    <link href="../../x-privacy-agent/x-privacy-agent.css" rel="stylesheet">
-    <script src="../../x-mnemonic-phrase/x-mnemonic-phrase.js"></script>
-    <link href="../../x-mnemonic-phrase/x-mnemonic-phrase.css" rel="stylesheet">
-    <link href="../../x-mnemonic-phrase/x-recovery-phrase.css" rel="stylesheet">
-    <script src="../view-backup-phrase.js"></script>
-    <!-- <link href="../view-backup-phrase.css" rel="stylesheet"> -->
+    <link href="../view-backup-phrase.css" rel="stylesheet">
 </head>
 
 <body>
     <main>
         <view-backup-phrase></view-backup-phrase>
     </main>
-    <script>
+    <script type="module">
+    import ViewBackupPhrase from '../view-backup-phrase.js'; 
     const $view = new ViewBackupPhrase();
 
     const randomKey = window.crypto.getRandomValues(new Uint8Array(32));
