--- a/x-mnemonic-phrase/demo/index.html
+++ b/x-mnemonic-phrase/demo/index.html
@@ -4,12 +4,7 @@
 <head>
     <title>Mnemonic Phrase</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <link href="../../fast-font/fast-font.css" rel="stylesheet">
-    <link href="../../theme/theme.css" rel="stylesheet">
-    <script src="/x-element/x-element.js"></script>
     <script src="/mnemonic-phrase/mnemonic-phrase.min.js"></script>
-    <script src="../x-mnemonic-phrase.js"></script>
-    <link href="../x-recovery-phrase.css" rel="stylesheet">
     <link href="../x-mnemonic-phrase.css" rel="stylesheet">
     <style>
     html,
@@ -27,7 +22,8 @@
 
 <body>
     <x-mnemonic-phrase></x-mnemonic-phrase>
-    <script>
+    <script type="module">
+    import XMnemonicPhrase from '../x-mnemonic-phrase.js';
     const randomKey = window.crypto.getRandomValues(new Uint8Array(32));
     const $mnemonicPhrase = new XMnemonicPhrase();
     $mnemonicPhrase.privateKey = MnemonicPhrase._arrayToHex(randomKey);
