--- a/x-wallet-backup/demo/index.html
+++ b/x-wallet-backup/demo/index.html
@@ -2,15 +2,7 @@
 <html>
 
 <head>
-    <title></title>
-    <script src="/x-element/x-element.js"></script>
-    <script src="/robohash/dist/robohash.min.js"></script>
-    <script src="/identicon/src/identicon.js"></script>
-    <script src="/identicon/src/identicon-img.js"></script>
-    <script src="/qr-encoder/qr-encoder.min.js"></script>
-    <script src="/wallet-backup/wallet-backup.js"></script>
-    <script src="../x-wallet-backup.js"></script>
-    <link href="../../fast-font/fast-font.css" rel="stylesheet">
+    <title>Wallet Backup Demo</title>
     <link href="../x-wallet-backup.css" rel="stylesheet">
     <style type="text/css">
     html,
@@ -23,11 +15,12 @@
 
 <body>
     <x-wallet-backup></x-wallet-backup>
-    <script>
-    const address = 'NQ52 R00E 3NKS DXH5 53U3 RK0V S7V4 LEH0 QV64';
-    const privateKey = 'b15560371ce744c3931327205160a68ac46e2cb19bf09ddbd33bfc0292be32ad';
-    const $walletBackup = new XWalletBackup();
-    $walletBackup.backup(address, privateKey);
+    <script type="module">
+        import XWalletBackup from "../x-wallet-backup.js";
+        const address = 'NQ52 R00E 3NKS DXH5 53U3 RK0V S7V4 LEH0 QV64';
+        const privateKey = 'b15560371ce744c3931327205160a68ac46e2cb19bf09ddbd33bfc0292be32ad';
+        const $walletBackup = new XWalletBackup();
+        $walletBackup.backup(address, privateKey);
     </script>
 </body>
 
