Use es6 and css imports, cleanup
Former-commit-id: a57e4947ffa5cd4a20d7de408debf2d5238c8085

--- a/view-backup-phrase-import/demo/index.html
+++ b/view-backup-phrase-import/demo/index.html
@@ -12,6 +12,8 @@
     </main>
     <script type="module">
     import ViewBackupPhraseImport from '../view-backup-phrase-import.js';
+    import MnemonicPhrase from '/libraries/mnemonic-phrase/mnemonic-phrase.min.js';
+
     const $view = new ViewBackupPhraseImport();
 
     const randomKey = window.crypto.getRandomValues(new Uint8Array(32));
