--- a/x-mnemonic-validate/demo/index.html
+++ b/x-mnemonic-validate/demo/index.html
@@ -42,7 +42,10 @@
     <x-mnemonic-validate></x-mnemonic-validate>
     <a>-></a>
     <script type="module">
-    import XMnemonicPhrase from '../x-mnemonic-validate.js';
+    import MnemonicPhrase from '/libraries/mnemonic-phrase/mnemonic-phrase.min.js';
+    import XMnemonicPhrase from '../x-mnemonic-phrase/x-mnemonic-phrase.js';
+    import XMnemonicValidate from '../x-mnemonic-validate.js';
+
     const randomKey = window.crypto.getRandomValues(new Uint8Array(32));
     const $mnemonicPhrase = new XMnemonicPhrase();
     $mnemonicPhrase.privateKey = MnemonicPhrase._arrayToHex(randomKey);
