Complete use of es6 and css imports
Former-commit-id: b147b0dd94d57d52fe076af128f4229f6f57ef5d

--- a/nimiq-logo/demo/index.html
+++ b/nimiq-logo/demo/index.html
@@ -3,9 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <link href="../../fast-font/fast-font.css" rel="stylesheet">
-    <link href="../../theme/theme.css" rel="stylesheet">
-    <link href="../../app-layout/app-layout.css" rel="stylesheet">
+    <link href="/library/nimiq-style/nimiq-style.css" rel="stylesheet">
     <link href="../nimiq-logo.css" rel="stylesheet">
     <style type="text/css">
         main > *{
