--- a/x-mnemonic-validate/demo/index.html
+++ b/x-mnemonic-validate/demo/index.html
@@ -42,7 +42,7 @@
     <x-mnemonic-validate></x-mnemonic-validate>
     <a>-></a>
     <script type="module">
-    import MnemonicPhrase from '/library/mnemonic-phrase/mnemonic-phrase.min.js';
+    import MnemonicPhrase from '/library/mnemonic-phrase/mnemonic-phrase.es6.min.js';
     import XMnemonicPhrase from '../x-mnemonic-phrase/x-mnemonic-phrase.js';
     import XMnemonicValidate from '../x-mnemonic-validate.js';
 
