--- a/view-backup-phrase/demo/index.html
+++ b/view-backup-phrase/demo/index.html
@@ -12,7 +12,7 @@
     </main>
     <script type="module">
     import ViewBackupPhrase from '../view-backup-phrase.js'; 
-    import MnemonicPhrase from '/library/mnemonic-phrase/mnemonic-phrase.min.js';
+    import MnemonicPhrase from '/library/mnemonic-phrase/mnemonic-phrase.es6.min.js';
 
     const $view = new ViewBackupPhrase();
 
