--- a/x-identicon/demo/index.html
+++ b/x-identicon/demo/index.html
@@ -8,8 +8,8 @@
 
 <body>
     <x-identicon></x-identicon>
-    <script>
-    	// import XIdenticon from '../x-identicon.js';
+    <script type="module">
+    	import XIdenticon from '../x-identicon.js';
         const $identicon = new XIdenticon();
         $identicon.address = '<<test address>>';
     </script>
