--- a/x-mnemonic-validate/demo/index.html
+++ b/x-mnemonic-validate/demo/index.html
@@ -43,7 +43,7 @@
     <a>-></a>
     <script type="module">
     import MnemonicPhrase from '/library/mnemonic-phrase/mnemonic-phrase.es6.min.js';
-    import XMnemonicPhrase from '../x-mnemonic-phrase/x-mnemonic-phrase.js';
+    import XMnemonicPhrase from '../../x-mnemonic-phrase/x-mnemonic-phrase.js';
     import XMnemonicValidate from '../x-mnemonic-validate.js';
 
     const randomKey = window.crypto.getRandomValues(new Uint8Array(32));
