--- a/x-pages/demo/index.html
+++ b/x-pages/demo/index.html
@@ -57,6 +57,7 @@
     </select>
     <script type="module">
         import XPages from "../x-pages.js";
+        import XElement from "../../../library/x-element/x-element.js";
         class XFancyPage extends XElement {
             onShow() {
                 console.log('Page four shown.');
