--- a/view-backup-phrase-validate/demo/index.html
+++ b/view-backup-phrase-validate/demo/index.html
@@ -12,7 +12,7 @@
     </main>
     <script type="module">
     import ViewBackupPhraseValidate from '../view-backup-phrase-validate.js';
-    import MnemonicPhrase from '/library/mnemonic-phrase/mnemonic-phrase.min.js';
+    import MnemonicPhrase from '/library/mnemonic-phrase/mnemonic-phrase.es6.min.js';
  
     const $view = new ViewBackupPhraseValidate();
 
