Align views correctly, cleanup

--- a/view-backup-file-import/demo/index.html
+++ b/view-backup-file-import/demo/index.html
@@ -20,7 +20,7 @@
             if (wallet.password === '111111') {
                 $view.onSuccess();
             } else {
-                $view.onPinIncorrect();
+                $view.onPasswordIncorrect();
             }
         }, 3000);
     });
