--- a/x-wallet-backup/demo/index.html
+++ b/x-wallet-backup/demo/index.html
@@ -21,6 +21,7 @@
         const privateKey = 'b15560371ce744c3931327205160a68ac46e2cb19bf09ddbd33bfc0292be32ad';
         const $walletBackup = new XWalletBackup();
         $walletBackup.backup(address, privateKey);
+        $walletBackup.addEventListener('x-wallet-backup-complete',console.log)
     </script>
 </body>
 
