--- a/x-address-scanner/demo/index.html
+++ b/x-address-scanner/demo/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Nimiq QR Code Scanner UI</title>
+    <title>Nimiq Address Scanner</title>
     <meta name="viewport" content="target-densitydpi=device-dpi,user-scalable=0,minimum-scale=1,maximum-scale=1,initial-scale=1">
 
     <link href="../x-address-scanner.css" rel="stylesheet">
