Use x-toast in input demos; cleanup

--- a/x-address-input/demo/index.html
+++ b/x-address-input/demo/index.html
@@ -5,6 +5,7 @@
     <title>x-address-input demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="../x-address-input.css" rel="stylesheet">
+    <link href="../../x-toast/x-toast.css" rel="stylesheet">
 </head>
 
 <body>
@@ -14,7 +15,9 @@
     <script type="module">
         import XAddressInput from "../x-address-input.js";
         const $input = new XAddressInput();
-        $input.addEventListener('x-address-input', e => console.log(`${e.type}: ${e.detail}`));
+        import XToast from "../../x-toast/x-toast.js";
+        const $toast = new XToast();
+        $input.addEventListener('x-address-input', e => $toast.show(`${e.type}: ${e.detail}`));
     </script>
 </body>
 
