--- a/x-address-scanner/demo/index.html
+++ b/x-address-scanner/demo/index.html
@@ -19,8 +19,10 @@
         }
 
         x-address-scanner {
-            width: 800px;
-            height: 584px;
+            /*width: 800px;
+            height: 584px;*/
+            width: 100%;
+            height: 100%;
             border-radius: 8px;
             border: 1px solid white;
             overflow: hidden;
