--- a/x-address-scanner/demo/index.html
+++ b/x-address-scanner/demo/index.html
@@ -19,10 +19,8 @@
         }
 
         x-address-scanner {
-            /*width: 800px;
-            height: 584px;*/
-            width: 100%;
-            height: 100%;
+            width: 800px;
+            height: 584px;
             border-radius: 8px;
             border: 1px solid white;
             overflow: hidden;
